made the panel collapse whenever the search bar is activated, and fixed minor responsiveness problems and hid the scrollbars

--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -10,6 +10,10 @@
   align-items: center;
   --input-width: 360px;
 
+  @media screen and (max-width: 800px) {
+    --input-width: 200px;
+  }
+
   & #search-container {
     width: var(--input-width);
     background-color: var(--background-color-dark);
@@ -31,7 +35,7 @@
       flex-direction: column;
       background-color: var(--background-color-dark);
       max-height: 50vh;
-      overflow-y:auto;
+      overflow-y: scroll;
       padding: 8px 0px;
 
       & li {
@@ -39,17 +43,17 @@
         & button {
           width: 90%;
           text-align: left;
-          cursor:pointer;
-          border:0px;
+          cursor: pointer;
+          border: 0px;
           background-color: var(--background-color-dark);
         }
       }
     }
 
     & ol.hidden {
-      display:none;
+      display: none;
+    }
   }
-}
 }
 
 #form-wrapper.fullscreen {
