--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
 :root {
-  --background-color-dark:#242424;
-  --text-color-dark:rgba(255, 255, 255, 0.87);
+  --background-color-dark: #242424;
+  --text-color-dark: rgba(255, 255, 255, 0.87);
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -20,6 +20,10 @@
   margin: 0;
   padding: 0;
   margin: 0;
+}
+
+body {
+  overflow: hidden; /* Hide scrollbars */
 }
 
 .leaflet-container {
